feat: implement authentication
